--- a/src/index.css
+++ b/src/index.css
@@ -4,23 +4,29 @@
 
 @layer components {
     html{
-        @apply font-sans;
+        @apply font-sans md:w-screen max-w-screen m-0 p-0 md:w-screen;
     }
     body{
-        @apply font-sans h-full;
+        @apply font-sans h-full w-screen max-w-screen;
+    }
+    body > *{
+        @apply ml-0 mt-0 w-full
     }
     .headderbg {
         @apply bg-opacity-10;
     }
     /* header styles */
     .header-nav-links{
-        @apply  block py-2 pl-3 pr-4 border-b border-gray-100 text-slate-300 hover:bg-blue-100 md:hover:bg-blue-700 md:hover:text-white md:hover:px-4 md:hover:py-2 md:border-0 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700; 
+        @apply block py-2 pl-3 pr-4 border-b hover:font-bold text-slate-300 md:hover:bg-blue-700  md:hover:px-4 md:hover:py-2 md:border-0  md:dark:hover:text-white text-gray-400 md:hover:bg-blue-500 font-semibold; 
     }
     .main-body{
-        @apply w-full h-full block mt-0 ml-0;
+        @apply w-screen h-full block mt-0 ml-0;
     }
     .book-button-primary{
         @apply inline-flex items-center w-40 px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:ring-blue-800;
+    }
+    .card-parent{
+        @apply w-full h-full;
     }
     /* booking form  */
     .dropdown-parent{
@@ -37,7 +43,7 @@
         @apply p-2 bg-gray-200 w-full;
       }
     .main-body .room-cards .room-card .room-child2{
-        @apply flex justify-center items-center bg-blue-600 text-white py-3 px-5 text-white text-xl;
+        @apply bg-blue-600 p-5 text-center  text-white text-xl;
       }
       
     .main-body   .room-cards .room-card .room-card-body{
@@ -45,34 +51,38 @@
        }
     /* rooms card 2 */
     .main-body .room-cards2 {
-        @apply h-full flex  justify-center  bg-gray-300 flex-row py-7  ;
+        @apply h-full flex  justify-center   flex-row py-7  ;
     }
     .main-body .room-cards2 .room-card2{
        @apply max-w-xs md:mx-5  border border-0 h-76 shadow-md dark:bg-gray-800  dark:border-gray-200 block overflow-hidden sm:w-800; 
     }
+    .main-body   .room-cards2 .room-card2 .room-card-body{
+        @apply flex mt-0 h-200 w-full;
+       }
     .main-body .room-cards2 .room-card2 .room-child{
-        @apply p-2 bg-gray-200 w-full;
+        @apply p-2 bg-gray-200 w-800;
       }
     .main-body .room-cards2 .room-card2 .room-child2{
-        @apply flex justify-center items-center bg-blue-600 text-white py-3 px-5 text-white text-xl;
+        @apply bg-blue-600 text-center  text-white text-xl w-200;
       }
       
-    .main-body   .room-cards2 .room-card2 .room-card-body{
-        @apply flex mt-0 h-full;
-       }
-    .main-body .room-cards3{
-        @apply w-full bg-white flex justify-center;
-    }
-    .main-body .room-card3{
-        @apply max-w-xs rounded-md overflow-hidden py-5 h-100 first:h-half relative;
-    }
     
+    .main-body .room-cards3{
+        @apply w-full bg-white flex justify-center py-3;
+    }
+    .main-body .room-cards3 .room-card3{
+        @apply max-w-xs  rounded-md overflow-hidden mx-4 shadow-lg h-100 flex flex-col;
+    }
+    .main-body .room-cards3 .room-card3 .first-child{
+        @apply w-full h-half p-0 mx-0 my-0 py-0 ;
+    }
     .main-body .room-card3 .room-card-body{
-        @apply h-half;
+        @apply h-half w-full  py-2 px-3;
     }
 
-
-
+    .main-body .room-cards3 .room-card3 .first-child .slideShow{
+        @apply w-full h-full;
+    }
 
 
     .slideShow{
@@ -87,5 +97,40 @@
     .slideImg{
         @apply w-full h-inherit;
     }
-    
+
+    /* room details page style */
+    .details-container{
+        @apply md:w-700  flex flex-row  my-3 mx-auto   px-10;
+    }
+    .details-container .room-imgs{
+        @apply w-half h-full flex flex-col mr-0;
+    }
+    .details-container  .room-imgs .room-img-1{
+        @apply w-full mb-2 h-96;
+        
+    }
+    .details-container .room-imgs .room-img-1 img{
+        @apply w-full h-full 
+    }
+     .room-imgs-others{
+        @apply w-full flex flex-row items-center justify-between mt-3
+    }
+     .room-imgs .room-imgs-others .other-img{
+        @apply w-44 h-40 object-cover;
+    }
+    /* the real room details */
+    .details-container .room-details{
+        @apply w-remaining ml-0 bg-white p-5
+    }
+    /* footer styles */
+
+    .footer-parent{
+        @apply text-center lg:text-left bg-gray-100 text-gray-600 w-full p-5;
+    }
+    .footer{
+        @apply flex justify-center items-center lg:justify-between p-6 border-0;
+    }
+    img{
+       @apply object-cover;
+    }
 }
